fixed all layout issues

--- a/app/assets/stylesheets/pages/developers.scss
+++ b/app/assets/stylesheets/pages/developers.scss
@@ -18,6 +18,7 @@
   }
 
   .documentation {
+    max-width: 90vw;
 
     padding-top: 24px;
     padding-bottom: 24px;
