--- a/app/assets/stylesheets/pages/developers/_banner.scss
+++ b/app/assets/stylesheets/pages/developers/_banner.scss
@@ -1,6 +1,19 @@
 #developers .banner {
   background-color: #d1dad8;
 
+  padding-left: 8px;
+  padding-right: 8px;
+
+  @media(min-width: 575px) {
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+
+  @media(min-width: 767px) {
+    padding-left: 72px;
+    padding-right: 72px;
+  }
+
   .fr-search-bar {
     max-width: 800px;
   }
